fix: timer not blinking on mobile

--- a/app/_components/DrawDetails/index.module.css
+++ b/app/_components/DrawDetails/index.module.css
@@ -321,6 +321,22 @@
     padding: 5px 0px;
     border-radius: 10.8px;
     font-size: 20px;
+    column-gap: 7px;
+  }
+
+  .blink {
+    animation: blink 1.5s steps(2, start) infinite;
+    opacity: 1;
+    font-size: 24px;
+    position: relative;
+    bottom: 1px;
+    font-family: "Lato";
+  }
+
+  @keyframes blink {
+    100% {
+      opacity: 0;
+    }
   }
 
   .display {
